Closed Bug 419060 Opened 17 years ago Closed 17 years ago

position:absolute and margin-left:auto doubles right margin

Categories

(Core :: Layout: Positioned, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta4

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

Attachments

(2 files)

This is a regression from bug 300030 that I found while writing a testcase for bug 403328. I changed availMarginSpace so it already has the margins subtracted (which helped make the overconstrained case easier to fix). However, I forgot to not subtract it again. Steps to reproduce: load testcase Expected results: blue box centered within border (as it is in Firefox 2, Opera, Safari) Actual results: blue box left-aligned (we're doubling the right margin)
Attached file testcase
Assignee: nobody → dbaron
Status: NEW → ASSIGNED
Attached patch patchSplinter Review
Attachment #305030 - Flags: superreview?(roc)
Attachment #305030 - Flags: review?(roc)
(I landed the reftests in question as layout/reftests/box-properties/abspos-* .)
Attachment #305030 - Flags: superreview?(roc)
Attachment #305030 - Flags: superreview+
Attachment #305030 - Flags: review?(roc)
Attachment #305030 - Flags: review+
Fix checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: