Fix regression handling auto margins on absolutely positioned elements.  b=419060  r+sr=roc  a=blocking1.9+